# climate-explorer

./: .Rhistory  .gitignore  README.md  docker-compose.yml  experimenting.R  faceted-pointrange.html  index.html  report-builder.Rproj  test.html  trend-chart.html
api/: Dockerfile  crud.R  plumber.R  pyproject.toml  startup.R
api/app/: crud.py  database.py  main.py  models.py  schemas.py  xarray_test.py
app/: Dockerfile  global.R  install.R  plot.R  server.R
data/: hargreaves_ssp126_mid.tif  hargreaves_ssp126_reference.tif  hargreaves_ssp245_mid.tif  hargreaves_ssp245_reference.tif  hargreaves_ssp585_mid.tif  hargreaves_ssp585_reference.tif  hurs_ssp126_end.tif  hurs_ssp126_reference.tif  hurs_ssp245_mid.tif  hurs_ssp245_reference.tif  hurs_ssp370_mid.tif  hurs_ssp585_end.tif  hurs_ssp585_reference.tif  huss_ssp126_end.tif  huss_ssp126_mid.tif  huss_ssp126_reference.tif  huss_ssp370_reference.tif  huss_ssp585_end.tif  penman_ssp126_end.tif  penman_ssp126_mid.tif  penman_ssp245_reference.tif  penman_ssp370_end.tif  penman_ssp370_mid.tif  penman_ssp585_end.tif  penman_ssp585_mid.tif  pr_ssp126_end.tif  pr_ssp245_end.tif  pr_ssp370_reference.tif  pr_ssp585_end.tif  pr_ssp585_reference.tif  rlds_ssp126_end.tif  rlds_ssp245_reference.tif  rlds_ssp370_end.tif  rlds_ssp585_reference.tif  rsds_ssp245_reference.tif  rsds_ssp370_reference.tif  rsds_ssp585_end.tif  rsds_ssp585_reference.tif  sfcWind_ssp126_end.tif  sfcWind_ssp126_mid.tif  (+24 more)
db/: postgres.conf
docs/: chartjs.html  index.html  line-chart-with-confidence.html
setup/: setup.sh  setup.sql
test/: server.R  ui.R  (+1 more)
(+9466 files in other folders)
