[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["colinbrust <colin.brust@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
starlite = "^1.51.0"
asyncpg = "^0.27.0"
shapely = "^2.0.1"
rasterio = "^1.3.5.post1"
SQLAlchemy = "^2.0.3"
polars = "^0.16.3"
uvicorn = "^0.20.0"
rich = "^13.3.1"
jsbeautifier = "^1.14.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
