[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["colinbrust <colin.brust@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.27.0"
shapely = "^2.0.1"
rasterio = "^1.3.5.post1"
SQLAlchemy = "^2.0.3"
polars = "^0.16.3"
uvicorn = "^0.20.0"
rich = "^13.3.1"
jsbeautifier = "^1.14.7"
rioxarray = "^0.13.3"
fastapi = "^0.94.1"
simplejson = "^3.18.4"
Pint = "^0.20.1"
psycopg2 = "^2.9.5"
connectorx = "^0.3.1"
pyarrow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
